--- a/diplomka_web/head.html
+++ b/diplomka_web/head.html
@@ -6,18 +6,13 @@
   <link href="dist/css/bootstrap.css" rel="stylesheet" />
   <script src="dist/js/bootstrap.min.js"></script>
   -->
-  <link href="dist/css/blog.css" rel="stylesheet" />
-
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="dist/css/blog.css" />
+  <link rel="stylesheet" href="dist/css/diplomka.css" />
 
   <!-- Latest compiled and minified JavaScript -->
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  <!-- Styl zvolený pro web děstké mapy -->
-  <link href="dist/css/diplomka.css" rel="stylesheet" />
-
-  <!-- javascript -->
-  <script src="dist/js/jquery.js"></script>
+  <script type="text/javascript" src="dist/js/jquery.js"></script>
+  <script type="text/javascript" src="dist/js/bootstrap.min.js"></script>
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
