--- a/diplomka_web/header.html
+++ b/diplomka_web/header.html
@@ -1,3 +1,12 @@
-    <div class="jumbotron">
-      <h2>Synchronizace a replikace geodat v prostředí Esri platformy</h2>
-    </div>
+<div class="blog-masthead">
+  <div class="container">
+    <nav class="blog-nav">
+    <a id="uvod"    class="blog-nav-item" href="index.php">Úvod</a>
+    <a id="cile"    class="blog-nav-item" href="cile.php">Cíle práce</a>
+    <a id="metody"  class="blog-nav-item" href="metody.php">Metody</a>
+    <a id="vysledky" class="blog-nav-item" href="vysledky.php">Výsledky</a>
+    <a id="zaver"   class="blog-nav-item" href="zaver.php">Závěr</a>
+    <a id="summary" class="blog-nav-item" href="summary.php">Summary</a>
+    </nav>
+  </div>
+</div>
